5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4367/executions/1613_1801.log
== TEST (2019-04-02 22:43:58) 
-- CODE:
nome_do_objeto= input("nome do objeto:")
numero_de_repetições=int(input("numero de repetições:"))
feitiço= (abra + nome_do_objeto)*numero_de_repetições
print(feitiço)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitiço= (abra + nome_do_objeto)*numero_de_repetições
NameError: name 'abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 22:45:13) 
-- CODE:
nome_do_objeto= input("nome do objeto:")
numero_de_repetições=int(input("numero de repetições:"))
feitiço= ("Abra + nome_do_objeto")*numero_de_repetições
print(feitiço)
-- OUTPUT:
Abra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objetoAbra + nome_do_objeto
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 22:45:42) 
-- CODE:
nome_do_objeto= input("nome do objeto:")
numero_de_repetições=int(input("numero de repetições:"))
feitiço= (Abra + nome_do_objeto)*numero_de_repetições
print(feitiço)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    feitiço= (Abra + nome_do_objeto)*numero_de_repetições
NameError: name 'Abra' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:14:34) 
-- CODE:
nome_do_objeto= input("nome do objeto:")
numero_de_repetiçoes=int(input("numero de repetições:"))

print(("Abra" + nome_do_objeto + " ")*numero_de_repetiçoes)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:15:03) 
-- CODE:
nome_do_objeto= input("nome do objeto:")
numero_de_repeticoes=int(input("numero de repetições:"))

print(("Abra" + nome_do_objeto + " ")*numero_de_repeticoes)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:15:17) 
-- CODE:
nome_do_objeto= input("nome do objeto:")
numero_de_repeticoes=int(input("numero de repeticoes:"))

print(("Abra" + nome_do_objeto + " ")*numero_de_repeticoes)
-- OUTPUT:
Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro Abralivro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-04 18:15:31) 
-- CODE:
nome_do_objeto= input("nome do objeto:")
numero_de_repeticoes=int(input("numero de repeticoes:"))

print(("Abra " + nome_do_objeto + " ")*numero_de_repeticoes)
-- OUTPUT:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-04 18:15:40) 
-- CODE:
nome_do_objeto= input("nome do objeto:")
numero_de_repeticoes=int(input("numero de repeticoes:"))

print(("Abra " + nome_do_objeto + " ")*numero_de_repeticoes)
-- EXECUTION TIME:
0.148302
-- TEST CASE 1:
---- input:
livro
8
---- correct output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
---- user output:
Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro Abra livro
-- TEST CASE 2:
---- input:
carro
2
---- correct output:
Abra carro Abra carro
---- user output:
Abra carro Abra carro
-- TEST CASE 3:
---- input:
caixa
1
---- correct output:
Abra caixa
---- user output:
Abra caixa
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
